[package]
name = "project-manager"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Spandan Roy"]
license = "BSD-2-Clause"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
toml = "0.7.8"
tui = "0.19"
crossterm = "0.25"
ignore = "0.4.20"
